--- a/css/screen.css
+++ b/css/screen.css
@@ -258,16 +258,27 @@ footer {
   footer ul li {
     width: 100%; } }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  #earthbounded.fp {
-    background: url("/images/sprite-fp@2x.png") 54px 58px; }
-  #earthbounded.left {
-    background: url("/images/sprite-left@2x.png") 54px 58px; }
-  #earthbounded.right {
-    background: url("/images/sprite-right@2x.png") 54px 58px; }
-
-  #ufo.flying {
-    background: url("/images/ufo@2x.png") 88px 86px; }
-
+  		/*
+  		#earthbounded {
+  			&.fp {
+  				background: url('/images/sprite-fp@2x.png') 54px 58px;
+  			}
+  
+  			&.left {
+  				background: url('/images/sprite-left@2x.png') 54px 58px;
+  			}
+  
+  			&.right {
+  				background: url('/images/sprite-right@2x.png') 54px 58px;
+  			}
+  		}
+  
+  		#ufo {
+  			&.flying {
+  				background: url('/images/ufo@2x.png') 88px 86px;
+  			}
+  		} 
+  		*/
   #onett {
     background: url("/images/onett@2x.png") top center 4316px 1730px; }
     #onett #trees {
