--- a/css/screen.scss
+++ b/css/screen.scss
@@ -475,6 +475,7 @@ nav {
     only screen and (min--moz-device-pixel-ratio: 1.5),
     only screen and (min-device-pixel-ratio: 1.5) {
 		
+		/*
 		#earthbounded {
 			&.fp {
 				background: url('/images/sprite-fp@2x.png') 54px 58px;
@@ -493,7 +494,8 @@ nav {
 			&.flying {
 				background: url('/images/ufo@2x.png') 88px 86px;
 			}
-		}
+		} 
+		*/
 
 		#onett {
 			background: url('/images/onett@2x.png') top center 4316px 1730px;
