--- a/css/screen.scss
+++ b/css/screen.scss
@@ -495,7 +495,7 @@ nav {
 				background: url('/images/ufo@2x.png') 88px 86px;
 			}
 		} 
-		*/
+		
 
 		#onett {
 			background-image: url('/images/onett@2x.png');
@@ -552,6 +552,6 @@ nav {
 				background-size: 2184px 580px;
 			}
 		}
-	}
+	} */
 
 }
