--- a/src/css/screen.scss
+++ b/src/css/screen.scss
@@ -388,6 +388,44 @@ nav {
 
 	} //talks
 
+	//////////////////////////////////////////////////////////
+	// about
+
+	#about {
+
+		div {
+			padding: 3% 20% 6%;
+			border-bottom: $dottedBorder;
+
+			&:last-child {
+				border-bottom: 0;
+			}
+
+			p {
+				max-width: 500px;
+				font-size: $p;
+				font-weight: 300;
+				line-height: $p*1.8;
+			}
+
+			img {
+				max-width: 100%;
+			}
+
+		}
+
+		h2 {
+			font-size: $h2;
+			font-family: $plutosans;
+			font-weight: 300;
+			line-height: $h2*1.5;
+		}
+
+		.intro {
+		}
+
+	} //talks
+
 	.clear {
 		margin: 0;
 		padding: 0;
@@ -468,6 +506,9 @@ nav {
 
 	.typeHighlight {
 		color: $flora !important;
+	}	
+	.typeLowlight {
+		color: $grey !important;
 	}
 
 	@media screen and (max-width:500px) {
