--- a/css/screen.scss
+++ b/css/screen.scss
@@ -202,11 +202,11 @@ nav {
 			position: absolute;
 
 			&.phased1 {
-				background: url('/images/index/ufo1.png') center center;
+				background: url('/images/index/z-ufo1.png') center center;
 			}
 
 			&.phased2 {
-				background: url('/images/index/ufo2.png') center center;
+				background: url('/images/index/z-ufo2.png') center center;
 			}
 
 		}
