--- a/css/screen.css
+++ b/css/screen.css
@@ -210,40 +210,6 @@ footer {
     font-size: 12px;
     color: #afb9c0; }
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0c2b3c;
-  filter: alpha(opacity=95);
-  -moz-opacity: 0.95;
-  -khtml-opacity: 0.95;
-  opacity: 0.95;
-  z-index: 10000; }
-
-.about {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10001;
-  text-align: centered; }
-  .about #closeOverlay {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 48px; }
-  .about p {
-    margin: 12% auto 15%;
-    padding: 0 10%;
-    max-width: 500px;
-    color: #fff; }
-
 .typeHighlight {
   color: #f194c9 !important; }
 
@@ -251,16 +217,13 @@ footer {
   color: #afb9c0 !important; }
 
 @media screen and (max-width: 500px) {
-  .about {
-    overflow: auto; }
-
   nav {
     display: none; }
 
-  #work div, #talks div {
+  #about div, #work div, #talks div {
     padding: 8% 10% 10%; }
 
-  #work .intro, #talks .intro {
+  #about .intro, #work .intro, #talks .intro {
     padding: 3% 10% 6%; }
 
   footer ul li {
