--- a/css/screen.scss
+++ b/css/screen.scss
@@ -280,37 +280,7 @@ nav {
 		.intro {
 			padding: 3% 20% 6%;
 		}
-
-		.opentable {
-		}
-
-		.blippy {
-		}		
-
-		.beyond {
-		}
-
-		.trulia {
-		}
-
-		.styleguides {
-		}
-
-		.library {
-		}
-
-		.daily {
-		}
-
-		.articles {
-		}
-
-		.sketchnotes {
-		}
-
-		.old {
-		}
-
+		
 	}
 
 	//////////////////////////////////////////////////////////
@@ -449,47 +419,6 @@ nav {
 
 	}
 
-	.overlay {
-		display: none;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: $blueblack;
-		filter:alpha(opacity=95);
-		-moz-opacity:0.95;
-		-khtml-opacity: 0.95;
-		opacity: 0.95;
-		z-index: 10000;
-	}
-
-	.about {
-		display: none;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 10001;
-		text-align: centered;
-
-		#closeOverlay {
-			position: absolute;
-			top: 10px;
-			right: 10px;
-			font-size: $h1;
-		}
-
-		p {
-			margin: 12% auto 15%;
-			padding: 0 10%;
-			max-width: 500px;
-			color: $white;
-		}
-
-	}
-
 	.typeHighlight {
 		color: $flora !important;
 	}	
@@ -499,19 +428,15 @@ nav {
 
 	@media screen and (max-width:500px) {
 
-		.about {
-			overflow: auto; //make bio scroll
-		}
-
 		nav {
 			display: none; //hide it
 		}
 
-		#work div, #talks div {
+		#about div, #work div, #talks div {
 			padding: 8% 10% 10%;
 		}
 
-		#work .intro, #talks .intro {
+		#about .intro, #work .intro, #talks .intro {
 			padding: 3% 10% 6%;
 		}
 
